// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> Default story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class=""
  >
    <div
      class="accordion-row"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state=""
        data-testid="accordion-button"
        id="headlessui-disclosure-button-:r0:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> DefaultOpen story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class=""
  >
    <div
      class="accordion-row"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r15:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state="open"
        data-testid="accordion-button"
        id="headlessui-disclosure-button-:r14:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel"
        data-headlessui-state="open"
        data-testid="accordion-panel"
        id="headlessui-disclosure-panel-:r15:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> Small story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class=""
  >
    <div
      class="accordion-row"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state=""
        data-testid="accordion-button"
        id="headlessui-disclosure-button-:r2:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> SmallOpen story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class=""
  >
    <div
      class="accordion-row"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r17:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state="open"
        data-testid="accordion-button"
        id="headlessui-disclosure-button-:r16:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--sm"
        data-headlessui-state="open"
        data-testid="accordion-panel"
        id="headlessui-disclosure-panel-:r17:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> Stacked story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class=""
  >
    <div
      class="accordion-row"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state=""
        id="headlessui-disclosure-button-:r4:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state=""
        id="headlessui-disclosure-button-:r6:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state=""
        id="headlessui-disclosure-button-:r8:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state=""
        id="headlessui-disclosure-button-:ra:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> StackedOpen story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class=""
  >
    <div
      class="accordion-row"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r19:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state="open"
        id="headlessui-disclosure-button-:r18:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel"
        data-headlessui-state="open"
        id="headlessui-disclosure-panel-:r19:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-row"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r1b:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state="open"
        id="headlessui-disclosure-button-:r1a:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel"
        data-headlessui-state="open"
        id="headlessui-disclosure-panel-:r1b:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-row"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r1d:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state="open"
        id="headlessui-disclosure-button-:r1c:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel"
        data-headlessui-state="open"
        id="headlessui-disclosure-panel-:r1d:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-row"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r1f:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state="open"
        id="headlessui-disclosure-button-:r1e:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel"
        data-headlessui-state="open"
        id="headlessui-disclosure-panel-:r1f:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> StackedOutline story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class="accordion--outline"
  >
    <div
      class="accordion-row accordion-row--outline"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--outline"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state=""
        id="headlessui-disclosure-button-:rk:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row accordion-row--outline"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--outline"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state=""
        id="headlessui-disclosure-button-:rm:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row accordion-row--outline"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--outline"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state=""
        id="headlessui-disclosure-button-:ro:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row accordion-row--outline"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--outline"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state=""
        id="headlessui-disclosure-button-:rq:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> StackedOutlineOpen story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class="accordion--outline"
  >
    <div
      class="accordion-row accordion-row--outline"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r1p:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--outline"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state="open"
        id="headlessui-disclosure-button-:r1o:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--outline"
        data-headlessui-state="open"
        id="headlessui-disclosure-panel-:r1p:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-row accordion-row--outline"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r1r:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--outline"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state="open"
        id="headlessui-disclosure-button-:r1q:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--outline"
        data-headlessui-state="open"
        id="headlessui-disclosure-panel-:r1r:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-row accordion-row--outline"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r1t:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--outline"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state="open"
        id="headlessui-disclosure-button-:r1s:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--outline"
        data-headlessui-state="open"
        id="headlessui-disclosure-panel-:r1t:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-row accordion-row--outline"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r1v:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--outline"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state="open"
        id="headlessui-disclosure-button-:r1u:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--outline"
        data-headlessui-state="open"
        id="headlessui-disclosure-panel-:r1v:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> StackedSmall story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class=""
  >
    <div
      class="accordion-row"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state=""
        id="headlessui-disclosure-button-:rc:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state=""
        id="headlessui-disclosure-button-:re:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state=""
        id="headlessui-disclosure-button-:rg:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state=""
        id="headlessui-disclosure-button-:ri:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> StackedSmallOpen story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class=""
  >
    <div
      class="accordion-row"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r1h:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state="open"
        id="headlessui-disclosure-button-:r1g:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--sm"
        data-headlessui-state="open"
        id="headlessui-disclosure-panel-:r1h:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-row"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r1j:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state="open"
        id="headlessui-disclosure-button-:r1i:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--sm"
        data-headlessui-state="open"
        id="headlessui-disclosure-panel-:r1j:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-row"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r1l:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state="open"
        id="headlessui-disclosure-button-:r1k:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--sm"
        data-headlessui-state="open"
        id="headlessui-disclosure-panel-:r1l:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-row"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r1n:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state="open"
        id="headlessui-disclosure-button-:r1m:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--sm"
        data-headlessui-state="open"
        id="headlessui-disclosure-panel-:r1n:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> StackedSmallOutline story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class="accordion--outline"
  >
    <div
      class="accordion-row accordion-row--outline"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm accordion-button--outline"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state=""
        id="headlessui-disclosure-button-:rs:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row accordion-row--outline"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm accordion-button--outline"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state=""
        id="headlessui-disclosure-button-:ru:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row accordion-row--outline"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm accordion-button--outline"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state=""
        id="headlessui-disclosure-button-:r10:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row accordion-row--outline"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm accordion-button--outline"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state=""
        id="headlessui-disclosure-button-:r12:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> StackedSmallOutlineOpen story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class="accordion--outline"
  >
    <div
      class="accordion-row accordion-row--outline"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r21:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm accordion-button--outline"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state="open"
        id="headlessui-disclosure-button-:r20:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--sm accordion-panel--outline"
        data-headlessui-state="open"
        id="headlessui-disclosure-panel-:r21:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-row accordion-row--outline"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r23:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm accordion-button--outline"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state="open"
        id="headlessui-disclosure-button-:r22:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--sm accordion-panel--outline"
        data-headlessui-state="open"
        id="headlessui-disclosure-panel-:r23:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-row accordion-row--outline"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r25:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm accordion-button--outline"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state="open"
        id="headlessui-disclosure-button-:r24:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--sm accordion-panel--outline"
        data-headlessui-state="open"
        id="headlessui-disclosure-panel-:r25:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-row accordion-row--outline"
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r27:"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--sm accordion-button--outline"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state="open"
        id="headlessui-disclosure-button-:r26:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading accordion-button__heading--sm"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--sm accordion-panel--outline"
        data-headlessui-state="open"
        id="headlessui-disclosure-panel-:r27:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> UsingRenderProp story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class=""
  >
    <div
      class="accordion-row"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-bootstrap-override="clickable-style-icon"
        data-headlessui-state=""
        data-testid="accordion-button"
        id="headlessui-disclosure-button-:r28:"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-button__heading"
        >
          Accordion Button 
          closed
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          viewBox="0 0 24 24"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
